--- a/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
@@ -106,6 +106,9 @@
   <string name="reboot_progress">Käynnistetään uudelleen…</string>
   <string name="remain">Jäljellä: %s</string>
   <string name="replace">Korvaa</string>
+  <string name="resolver_app_recommend_flag">Suosittele</string>
+  <string name="resolver_recommended_app_name">"%1$s
+(%2$s)"</string>
   <string name="resource_select">Valitse</string>
   <string name="screen_button_notification_text">Ota ne takaisin käyttöön painamalla Koti- ja Virtapainiketta samanaikaisesti.</string>
   <string name="screen_button_notification_title">Navigointipainikkeet on poistettu käytöstä</string>
